# pylustrator-illustrator

./: MANIFEST.in  README.md  pyproject.toml  ty.toml
docs/: api.rst  artist_operation_support_matrix.md  demo_forge_workflow.py  example_pylustrator.py  illustrator_interaction_roadmap.md  index.rst  source_doctor.rst
pylustrator/: QLinkableWidgets.py  QtGui.py  QtGuiDrag.py  __init__.py  artist_adapters.py  change_tracker.py  commands.py  content_preview_cache.py  display_geometry.py  drag_helper.py  editor_model.py  exception_swallower.py  interaction.py  interaction_index.py  legend_layout.py  legend_replay.py  lifecycle_commands.py  operations.py  property_adapters.py  property_transactions.py  replay.py  smart_guide_ui.py  smart_guides.py  snap.py  source_doctor.py  source_migration.py  transform_engine.py
tests/: test_annotation_point_preview_performance.py  test_artist_adapter_inheritance.py  test_artist_adapters.py  test_artist_operation_contract_matrix.py  test_artist_reference_contract.py  test_color_panel_selection.py  test_content_preview_cache.py  test_direct_point_editing.py  test_display_geometry_paint_envelope.py  test_editor_model.py  test_history_rendering.py  test_initialization.py  test_inline_text_editing.py  test_interaction_acceleration.py  test_legend.py  test_legend_interaction.py  test_legend_layout.py  test_lifecycle_commands.py  test_line2d_raw_state.py  test_masked_replay_semantics.py  test_point_buffer_ownership.py  test_property_transactions.py  test_selection_indicator.py  test_semantic_text_properties.py  test_smart_guide_integration.py  test_smart_guides.py  test_text.py  (+5 more)
(+11 files in other folders)
