[project]
name = "pylustrator"
version = "1.3.0"
description = "Illustrator-style direct manipulation for reproducible Matplotlib figures."
authors = [{ name = "Richard Gerum", email = "pypi.org.zookeeper162@passmail.net" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "natsort>=4.0.0",
    "numpy>=1.23.5",
    "matplotlib>=3.8.4",
    "PyQt5>=5.15.2",
    "qtawesome>=0.5.0",
    "scikit-image>=0.21.0",
    "qtpy>=2.4.3",
]

[project.urls]
Homepage = "https://github.com/Molaison/pylustrator-illustrator"
Repository = "https://github.com/Molaison/pylustrator-illustrator"
Issues = "https://github.com/Molaison/pylustrator-illustrator/issues"
Documentation = "https://pylustrator.readthedocs.io/en/latest/"
Upstream = "https://github.com/rgerum/pylustrator"

[project.optional-dependencies]
dev = ["ruff>=0.14.11", "ty>=0.0.10"]
test = ["pytest>=7.2.0,<8.0.0"]

[tool.ruff]
exclude = ["docs/example_pylustrator.py"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = [
    "mock>=5.2.0",
    "nbsphinx>=0.9.8",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-bibtex>=2.6.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pylustrator*"]
